# esp-now-tester

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  export.sh  open_ide.sh  partitions_4M_ota.csv  sdkconfig
main/: CMakeLists.txt  config.cpp  config.h  debugconsole.cpp  debugconsole.h  espnow.cpp  espnow.h  main.cpp  ota.cpp  ota.h  taskmanager.cpp  webserver.cpp  webserver.h  wifi.cpp
